test/parser/Queries/syntax_errors/fail_K-ForExprWithout-40.xq
(:* let ******* for *********** where * where ******************* for **** for ********:)
 ne (:  K-ForExprWithout-40  for                         foo    :)foo
(: Written by: Frans Englich    $                   ne         :) where 
( where : Date:2006-10-05T18:29:37+02:00                      :) where 
(:  ne Purpose: Variable which is not in scope.    where          where   :)
(:************** ne ***foo*************** where *******************:)
for $foo in 1 for  return 					$bar + (for $ eq bar in 2 return $bar)